more lines of code

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,12 @@
-@media screen and (max-width: 700px) {
+
+@media screen and (min-width: 900px) {
+    .logo-small {
+        display: none;
+    }
+    
+}
+
+@media screen and (max-width: 900px) {
     .custom-hero {
         display: flex;
         flex-direction: column;
@@ -6,15 +14,20 @@
         justify-content: center;
     }
 
-    *  {
-        overflow-x: hidden;
-        overflow-y: auto !important;
-    }
-
+   
 
     .card-responsive {
         width: 100% !important;
         margin-right: 0 !important;
+    }
+
+    .logo-big {
+        display: none;
+    }
+
+    .logo-small {
+        display: flex;
+        width: 50px;
     }
 
     .responsive-col {
@@ -23,6 +36,15 @@
 
     .responsive-col {
         grid-column: 12;
+    }
+
+    .left-nav-links {
+        display: none;
+    }
+
+    .left-nav-icons {
+        align-self: center;
+        padding: 10px;
     }
 }
 
