--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,58 @@
-
-
 .custom-container {
     padding: 0;
     margin: 0;
     width: 100vw !important;
+}
+
+.navbar-container {
+    height: 75px;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 101;
+    background-color: #fff;
+}
+
+ul {
+    padding-left: 0;
+}
+
+.sidebar-container-size {
+    height: 100vh;
+    width: 150px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    padding-top: 80px;
+
+    display: flex;
+    justify-content: center;
+}
+
+.sidebar-nav {
+    height: 100vh;
+    width: 200px;
+    
+}
+
+
+.flex-col-container {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.bottom-side-container {
+    margin-bottom: 100px;
+}
+
+.hero {
+    padding-left: 150px;
+    padding-top: 75px;
 }
 
 .container {
@@ -11,15 +60,16 @@
     padding: 0 !important;
 }
 
-.side-bar {
-    height: 100vh;
-}
-
 #logo-img {
     width: 15%;
 }
 
-
+.icona-nuovo-studente {
+    padding: 5px;
+    border: 1px solid white;
+    border-radius: 6px;
+    margin-left: 10px;
+}
 
 #class-avatar-img {
     width: 10% !important;
@@ -47,6 +97,8 @@
 .breadcrumbs-tags {
     background-color: rgba(0, 0, 0, 0.2);
     height: 1.5rem;
+    text-align: center;
+    vertical-align: middle;
     padding: 0 0.4rem;
     border-radius: 60px;
     font-size: small;
@@ -85,4 +137,30 @@
 
 #stats-img {
     width: 90%;
+}
+
+#bottom-icon {
+    
+}
+
+.test {
+    background-color: #198754;
+    height: 100vh;
+    width: 550px;
+    z-index: 1000;
+}
+
+.ts2 {
+    z-index: 1000;
+}
+
+.ts3 {
+    z-index: 1000;
+    position: absolute;
+    right: 0;
+    margin: 0;
+}
+
+.breadcrumbs-resp-plus {
+   display: none;
 }
